# Magma

./: .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  AGENTS.md  Assert.c  Assert.h  AssertTest.c  AssertTest.h  CExecutor.java  CHANGES.md  CHECKSTYLE-README.md  CHECKSTYLE-VALIDATION.md  CLAUDE.md  CMakeLists.txt  CODING_GUIDELINES.md  COPILOT_INSTRUCTIONS.md  Cargo.toml  CompileException.java  CompileTest.java  Compiler.java  Core.c  Core.h  Err.java  Executor.java  FIELD_VALIDATION_FEATURE.md  GenerateDiagram.java  InterpretError.java  Interpreter.java  InterpreterTest.java  Intrepreter.java  Location.java  MAVEN-FIXES.md  Main.c  Main.h  Main.input.xml  Main.java  Main.mg  Main.mgs  Main.output.xml  (+138 more)
.github/: copilot-instructions.md
.junie/: guidelines.md
docs/: API.md  ARCHITECTURE.md  BAN_FOR_LOOPS_CHECKSTYLE.md  CHANGELOG.md  CHECKSTYLE_COMPLIANCE_FIX.md  CPP_GENERATION_FIX.md  DEVELOPER_GUIDE.md  DOCUMENTATION_ORGANIZATION.md  DeveloperGuide.md  EMPTY_TEMPLATE_FIX.md  FLATMAP_IMPLEMENTATION.md  HEADEDSTREAM_FLATMAP_TEST.md  IMPLEMENTATION.md  INDEX.md  INTERFACE_METHOD_BODY_FIX.md  JAVA_CONVENTIONS.md  JAVA_SERIALIZER_RENAME.md  JROOT_PERFORMANCE_ISSUE.md  LANGUAGE.md  LANGUAGE_SPEC.md  METHOD_BODY_TYPE_FIX.md  NODELISTRULE_CHECKSTYLE_FIX.md  NODELISTRULE_NONEMPTYLISTRULE_MERGE.md  NODE_NONEMPTYLIST_REFACTORING.md  NODE_OUTPUT_TRUNCATION.md  NONEMPTYLIST_INTRODUCTION.md  NONEMPTYLIST_REFACTORING.md  ONE_LOOP_PER_METHOD_CHECKSTYLE.md  OPTION_NONEMPTYLIST_DESERIALIZATION_FIX.md  PLACEHOLDER_STATEMENT_FIX.md  PLANNING.md  PR_DESCRIPTION.md  RESULT_TYPE_ERROR_HANDLING.md  ROADMAP.md  SPLITTER_REFACTORING.md  TEST_COMPILATION_FIX.md  TOKENSEQUENCE_REFACTORING.md  TOKENSEQUENCE_REFACTORING_SESSION_1.md  TRY_DIRECT_PERMITTED_SUBCLASSES_REFACTORING.md  (+27 more)
examples/: hello.mg  (+5 more)
(+3184 files in other folders)
