cmake_minimum_required(VERSION 3.17)
project(Magma C)

set(CMAKE_C_STANDARD 11)

add_executable(Magma com/meti/api/test/Assert.c com/meti/api/test/Assert.h com/meti/api/collect/Array.c com/meti/api/collect/Array.h com/meti/app.c com/meti/app.h com/meti/Main.c com/meti/api/core/Core.c com/meti/api/core/Core.h com/meti/api/core/Exception.c com/meti/api/core/Exception.h com/meti/api/core/Option.c com/meti/api/core/Option.h com/meti/api/string/String.c com/meti/api/string/String.h com/meti/api/collect/ArrayTest.c com/meti/api/collect/ArrayTest.h com/meti/api/string/StringTest.c com/meti/api/string/StringTest.h com/meti/api/core/OptionTest.c com/meti/api/core/OptionTest.h)
add_executable(MagmaTest com/meti/api/test/Assert.c com/meti/api/test/Assert.h com/meti/api/collect/Array.c com/meti/api/collect/Array.h com/meti/app.c com/meti/app.h com/meti/Test.c com/meti/api/core/Core.c com/meti/api/core/Core.h com/meti/api/core/Exception.c com/meti/api/core/Exception.h com/meti/api/core/Option.c com/meti/api/core/Option.h com/meti/api/string/String.c com/meti/api/string/String.h com/meti/api/collect/ArrayTest.c com/meti/api/collect/ArrayTest.h com/meti/api/string/StringTest.c com/meti/api/string/StringTest.h com/meti/api/core/OptionTest.c com/meti/api/core/OptionTest.h)